# importo

./: .gitignore  CHANGELOG.md  README.md  bump  pyproject.toml  release  requirements_dev.txt  setup.cfg  tox.ini
src/importo/: __init__.py  __main__.py  commands.py  fs.py  parser.py  profiler.py  tree.py  utils.py
src/importo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_command.py  test_fs.py  test_utils.py
tests/fixtures/nested/: main.py
tests/fixtures/simple/: main.py
