[project]
name = "importo"
version = "0.2.0"
description = "Python import time profiler."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
  "pytest",
  "tox",
  "ruff",
]

[tool.tox]
requires = ["tox"]
env_list = ["3.13", "3.12", "3.11", "3.10", "3.9"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
commands = [["pytest"]]
