[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "importo"
version = "0.3.0"
description = "Python import time profiler."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.2",
    "typing-extensions>=4.12.2",
]
authors = [
  {name = "Joao Figueiredo"},
]
maintainers = [
  {name = "Joao Figueiredo"},
]

[project.scripts]
importo = "importo.__main__:entrypoint"

[dependency-groups]
dev = [
  "pytest",
  "tox",
  "ruff",
  "importo",
]

[tool.tox]
requires = ["tox"]
env_list = ["3.13", "3.12", "3.11", "3.10"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
deps = ["pytest"]
commands = [["pytest"]]

[tool.uv.sources]
importo = { workspace = true }
