[metadata]
name = importo
description = Python import time profiler.
version = 0.1.0
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir =
    =src
packages = find:

[options.entry_points]
console_scripts=
    importo = importo.__main__:entrypoint

[options.packages.find]
where = src
